Form alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,10 @@ body {
 
 .container-1 {
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-around;
     
 
 }
@@ -91,9 +95,8 @@ body {
 
 
 .main-content-form {
-    max-width: 80%;
-    margin: 10px;
-    margin: auto;
+    width: 80%;
+    margin: 10px auto;
 
 }
 
@@ -101,7 +104,7 @@ body {
     background-color: rgba(42, 14, 68, 0.062);
     border-radius: 20px;
     border: none;
-    max-width: 75%;
+    max-width: 90%;
 
 }
 
@@ -117,6 +120,9 @@ input {
 .form-field-size input {
     background-color: rgba(36, 14, 56, 0.39);
     border: 2px solid transparent;
+    width: 80%;
+    margin: .5em 0;
+    height: 1.5em;
 
 }
 
@@ -128,18 +134,18 @@ input {
 .form-checkbox-size {
     color: #f1f1f1;
     font-size: 1.5em;
-    margin-left: 5px;
-    padding-left: 0;
+    padding: 0;
     display: flex;
     flex-direction: row;
-    gap: 20px;
     flex-wrap: wrap;
-    
+    justify-content: space-around;
+        
 }
 
 .form-checkbox-size input {
     height: 20px;
     width: 20px;
+    margin-left: 5px;
 }
 
 .form-checkbox-size label:hover {
@@ -151,6 +157,8 @@ input {
     height: 2em;
     width: 200px;
     background-color: rgba(36, 14, 56, 0.692);
+    display: block;
+    margin: 1em auto 0;
 }
 
 .form-button:hover {
@@ -219,16 +227,27 @@ input {
             display: flex;
             flex-direction: column;
             flex-wrap: wrap;
-            align-items: center;
             }
           
     .main-content h1{
             font-size: 2.5em;
             
+            
         } 
         
     .main-content p{
             font-size: 1.8em;
+        }
+
+        .form-checkbox-size {
+            color: #f1f1f1;
+            font-size: 1.5em;
+            padding: 0;
+            display: flex;
+            flex-direction: row;
+            flex-wrap: wrap;
+            justify-content: space-between;
+                
         }
 
         
